parser/HelloParser.cpp

// Generated from Hello.g4 by ANTLR 4.13.2


#include "HelloVisitor.h"

#include "HelloParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct HelloParserStaticData final {
  HelloParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  HelloParserStaticData(const HelloParserStaticData&) = delete;
  HelloParserStaticData(HelloParserStaticData&&) = delete;
  HelloParserStaticData& operator=(const HelloParserStaticData&) = delete;
  HelloParserStaticData& operator=(HelloParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag helloParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<HelloParserStaticData> helloParserStaticData = nullptr;

void helloParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (helloParserStaticData != nullptr) {
    return;
  }
#else
  assert(helloParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<HelloParserStaticData>(
    std::vector<std::string>{
      "source", "sourceItem", "funcDef", "funcSignature", "argList", "argDef", 
      "body", "varDeclList", "statementBlock", "statement", "returnStatement", 
      "ifStatement", "whileStatement", "doStatement", "exprStatement", "expr", 
      "assignExpr", "logicalOrExpr", "logicalAndExpr", "compareExpr", "addSubExpr", 
      "mulDivExpr", "unaryExpr", "callExpr", "primaryExpr", "exprList", 
      "typeRef", "builtinType", "literal", "identifier"
    },
    std::vector<std::string>{
      "", "'method'", "';'", "'('", "')'", "':'", "','", "'begin'", "'end'", 
      "'return'", "'if'", "'then'", "'else'", "'while'", "'do'", "'repeat'", 
      "'until'", "':='", "'||'", "'&&'", "'<'", "'<='", "'>'", "'>='", "'=='", 
      "'!='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'['", "']'", "'array'", 
      "'of'", "'bool'", "'byte'", "'int'", "'uint'", "'long'", "'ulong'", 
      "'char'", "'string'", "'var'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "VAR", "BoolLiteral", "StringLiteral", 
      "CharLiteral", "HexLiteral", "BitsLiteral", "DecimalLiteral", "Identifier", 
      "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  helloParserStaticData = std::move(staticData);
}

}

HelloParser::HelloParser(TokenStream *input) : HelloParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

HelloParser::HelloParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  HelloParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *helloParserStaticData->atn, helloParserStaticData->decisionToDFA, helloParserStaticData->sharedContextCache, options);
}

HelloParser::~HelloParser() {
  delete _interpreter;
}

const atn::ATN& HelloParser::getATN() const {
  return *helloParserStaticData->atn;
}

std::string HelloParser::getGrammarFileName() const {
  return "Hello.g4";
}

const std::vector<std::string>& HelloParser::getRuleNames() const {
  return helloParserStaticData->ruleNames;
}

const dfa::Vocabulary& HelloParser::getVocabulary() const {
  return helloParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView HelloParser::getSerializedATN() const {
  return helloParserStaticData->serializedATN;
}


//----------------- SourceContext ------------------------------------------------------------------

HelloParser::SourceContext::SourceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HelloParser::SourceContext::EOF() {
  return getToken(HelloParser::EOF, 0);
}

std::vector<HelloParser::SourceItemContext *> HelloParser::SourceContext::sourceItem() {
  return getRuleContexts<HelloParser::SourceItemContext>();
}

HelloParser::SourceItemContext* HelloParser::SourceContext::sourceItem(size_t i) {
  return getRuleContext<HelloParser::SourceItemContext>(i);
}


size_t HelloParser::SourceContext::getRuleIndex() const {
  return HelloParser::RuleSource;
}


std::any HelloParser::SourceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitSource(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::SourceContext* HelloParser::source() {
  SourceContext *_localctx = _tracker.createInstance<SourceContext>(_ctx, getState());
  enterRule(_localctx, 0, HelloParser::RuleSource);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HelloParser::T__0) {
      setState(60);
      sourceItem();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(66);
    match(HelloParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SourceItemContext ------------------------------------------------------------------

HelloParser::SourceItemContext::SourceItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::FuncDefContext* HelloParser::SourceItemContext::funcDef() {
  return getRuleContext<HelloParser::FuncDefContext>(0);
}


size_t HelloParser::SourceItemContext::getRuleIndex() const {
  return HelloParser::RuleSourceItem;
}


std::any HelloParser::SourceItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitSourceItem(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::SourceItemContext* HelloParser::sourceItem() {
  SourceItemContext *_localctx = _tracker.createInstance<SourceItemContext>(_ctx, getState());
  enterRule(_localctx, 2, HelloParser::RuleSourceItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    funcDef();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefContext ------------------------------------------------------------------

HelloParser::FuncDefContext::FuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::FuncSignatureContext* HelloParser::FuncDefContext::funcSignature() {
  return getRuleContext<HelloParser::FuncSignatureContext>(0);
}

HelloParser::BodyContext* HelloParser::FuncDefContext::body() {
  return getRuleContext<HelloParser::BodyContext>(0);
}


size_t HelloParser::FuncDefContext::getRuleIndex() const {
  return HelloParser::RuleFuncDef;
}


std::any HelloParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::FuncDefContext* HelloParser::funcDef() {
  FuncDefContext *_localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
  enterRule(_localctx, 4, HelloParser::RuleFuncDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(HelloParser::T__0);
    setState(71);
    funcSignature();
    setState(74);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HelloParser::T__6:
      case HelloParser::VAR: {
        setState(72);
        body();
        break;
      }

      case HelloParser::T__1: {
        setState(73);
        match(HelloParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncSignatureContext ------------------------------------------------------------------

HelloParser::FuncSignatureContext::FuncSignatureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::IdentifierContext* HelloParser::FuncSignatureContext::identifier() {
  return getRuleContext<HelloParser::IdentifierContext>(0);
}

HelloParser::ArgListContext* HelloParser::FuncSignatureContext::argList() {
  return getRuleContext<HelloParser::ArgListContext>(0);
}

HelloParser::TypeRefContext* HelloParser::FuncSignatureContext::typeRef() {
  return getRuleContext<HelloParser::TypeRefContext>(0);
}


size_t HelloParser::FuncSignatureContext::getRuleIndex() const {
  return HelloParser::RuleFuncSignature;
}


std::any HelloParser::FuncSignatureContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitFuncSignature(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::FuncSignatureContext* HelloParser::funcSignature() {
  FuncSignatureContext *_localctx = _tracker.createInstance<FuncSignatureContext>(_ctx, getState());
  enterRule(_localctx, 6, HelloParser::RuleFuncSignature);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    identifier();
    setState(77);
    match(HelloParser::T__2);
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HelloParser::Identifier) {
      setState(78);
      argList();
    }
    setState(81);
    match(HelloParser::T__3);
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HelloParser::T__4) {
      setState(82);
      match(HelloParser::T__4);
      setState(83);
      typeRef();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgListContext ------------------------------------------------------------------

HelloParser::ArgListContext::ArgListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HelloParser::ArgDefContext *> HelloParser::ArgListContext::argDef() {
  return getRuleContexts<HelloParser::ArgDefContext>();
}

HelloParser::ArgDefContext* HelloParser::ArgListContext::argDef(size_t i) {
  return getRuleContext<HelloParser::ArgDefContext>(i);
}


size_t HelloParser::ArgListContext::getRuleIndex() const {
  return HelloParser::RuleArgList;
}


std::any HelloParser::ArgListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitArgList(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::ArgListContext* HelloParser::argList() {
  ArgListContext *_localctx = _tracker.createInstance<ArgListContext>(_ctx, getState());
  enterRule(_localctx, 8, HelloParser::RuleArgList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    argDef();
    setState(91);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HelloParser::T__5) {
      setState(87);
      match(HelloParser::T__5);
      setState(88);
      argDef();
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgDefContext ------------------------------------------------------------------

HelloParser::ArgDefContext::ArgDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::IdentifierContext* HelloParser::ArgDefContext::identifier() {
  return getRuleContext<HelloParser::IdentifierContext>(0);
}

HelloParser::TypeRefContext* HelloParser::ArgDefContext::typeRef() {
  return getRuleContext<HelloParser::TypeRefContext>(0);
}


size_t HelloParser::ArgDefContext::getRuleIndex() const {
  return HelloParser::RuleArgDef;
}


std::any HelloParser::ArgDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitArgDef(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::ArgDefContext* HelloParser::argDef() {
  ArgDefContext *_localctx = _tracker.createInstance<ArgDefContext>(_ctx, getState());
  enterRule(_localctx, 10, HelloParser::RuleArgDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    identifier();
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HelloParser::T__4) {
      setState(95);
      match(HelloParser::T__4);
      setState(96);
      typeRef();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BodyContext ------------------------------------------------------------------

HelloParser::BodyContext::BodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::StatementBlockContext* HelloParser::BodyContext::statementBlock() {
  return getRuleContext<HelloParser::StatementBlockContext>(0);
}

std::vector<tree::TerminalNode *> HelloParser::BodyContext::VAR() {
  return getTokens(HelloParser::VAR);
}

tree::TerminalNode* HelloParser::BodyContext::VAR(size_t i) {
  return getToken(HelloParser::VAR, i);
}

std::vector<HelloParser::VarDeclListContext *> HelloParser::BodyContext::varDeclList() {
  return getRuleContexts<HelloParser::VarDeclListContext>();
}

HelloParser::VarDeclListContext* HelloParser::BodyContext::varDeclList(size_t i) {
  return getRuleContext<HelloParser::VarDeclListContext>(i);
}


size_t HelloParser::BodyContext::getRuleIndex() const {
  return HelloParser::RuleBody;
}


std::any HelloParser::BodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitBody(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::BodyContext* HelloParser::body() {
  BodyContext *_localctx = _tracker.createInstance<BodyContext>(_ctx, getState());
  enterRule(_localctx, 12, HelloParser::RuleBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HelloParser::VAR) {
      setState(99);
      match(HelloParser::VAR);
      setState(100);
      varDeclList();
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(106);
    statementBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclListContext ------------------------------------------------------------------

HelloParser::VarDeclListContext::VarDeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HelloParser::IdentifierContext *> HelloParser::VarDeclListContext::identifier() {
  return getRuleContexts<HelloParser::IdentifierContext>();
}

HelloParser::IdentifierContext* HelloParser::VarDeclListContext::identifier(size_t i) {
  return getRuleContext<HelloParser::IdentifierContext>(i);
}

HelloParser::TypeRefContext* HelloParser::VarDeclListContext::typeRef() {
  return getRuleContext<HelloParser::TypeRefContext>(0);
}


size_t HelloParser::VarDeclListContext::getRuleIndex() const {
  return HelloParser::RuleVarDeclList;
}


std::any HelloParser::VarDeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitVarDeclList(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::VarDeclListContext* HelloParser::varDeclList() {
  VarDeclListContext *_localctx = _tracker.createInstance<VarDeclListContext>(_ctx, getState());
  enterRule(_localctx, 14, HelloParser::RuleVarDeclList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    identifier();
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HelloParser::T__5) {
      setState(109);
      match(HelloParser::T__5);
      setState(110);
      identifier();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HelloParser::T__4) {
      setState(116);
      match(HelloParser::T__4);
      setState(117);
      typeRef();
    }
    setState(120);
    match(HelloParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementBlockContext ------------------------------------------------------------------

HelloParser::StatementBlockContext::StatementBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HelloParser::StatementContext *> HelloParser::StatementBlockContext::statement() {
  return getRuleContexts<HelloParser::StatementContext>();
}

HelloParser::StatementContext* HelloParser::StatementBlockContext::statement(size_t i) {
  return getRuleContext<HelloParser::StatementContext>(i);
}


size_t HelloParser::StatementBlockContext::getRuleIndex() const {
  return HelloParser::RuleStatementBlock;
}


std::any HelloParser::StatementBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitStatementBlock(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::StatementBlockContext* HelloParser::statementBlock() {
  StatementBlockContext *_localctx = _tracker.createInstance<StatementBlockContext>(_ctx, getState());
  enterRule(_localctx, 16, HelloParser::RuleStatementBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(HelloParser::T__6);
    setState(126);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4468417604134536) != 0)) {
      setState(123);
      statement();
      setState(128);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(129);
    match(HelloParser::T__7);
    setState(130);
    match(HelloParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

HelloParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::ReturnStatementContext* HelloParser::StatementContext::returnStatement() {
  return getRuleContext<HelloParser::ReturnStatementContext>(0);
}

HelloParser::IfStatementContext* HelloParser::StatementContext::ifStatement() {
  return getRuleContext<HelloParser::IfStatementContext>(0);
}

HelloParser::WhileStatementContext* HelloParser::StatementContext::whileStatement() {
  return getRuleContext<HelloParser::WhileStatementContext>(0);
}

HelloParser::DoStatementContext* HelloParser::StatementContext::doStatement() {
  return getRuleContext<HelloParser::DoStatementContext>(0);
}

HelloParser::StatementBlockContext* HelloParser::StatementContext::statementBlock() {
  return getRuleContext<HelloParser::StatementBlockContext>(0);
}

HelloParser::ExprStatementContext* HelloParser::StatementContext::exprStatement() {
  return getRuleContext<HelloParser::ExprStatementContext>(0);
}


size_t HelloParser::StatementContext::getRuleIndex() const {
  return HelloParser::RuleStatement;
}


std::any HelloParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::StatementContext* HelloParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 18, HelloParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(138);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HelloParser::T__8: {
        enterOuterAlt(_localctx, 1);
        setState(132);
        returnStatement();
        break;
      }

      case HelloParser::T__9: {
        enterOuterAlt(_localctx, 2);
        setState(133);
        ifStatement();
        break;
      }

      case HelloParser::T__12: {
        enterOuterAlt(_localctx, 3);
        setState(134);
        whileStatement();
        break;
      }

      case HelloParser::T__14: {
        enterOuterAlt(_localctx, 4);
        setState(135);
        doStatement();
        break;
      }

      case HelloParser::T__6: {
        enterOuterAlt(_localctx, 5);
        setState(136);
        statementBlock();
        break;
      }

      case HelloParser::T__2:
      case HelloParser::T__25:
      case HelloParser::T__26:
      case HelloParser::T__30:
      case HelloParser::BoolLiteral:
      case HelloParser::StringLiteral:
      case HelloParser::CharLiteral:
      case HelloParser::HexLiteral:
      case HelloParser::BitsLiteral:
      case HelloParser::DecimalLiteral:
      case HelloParser::Identifier: {
        enterOuterAlt(_localctx, 6);
        setState(137);
        exprStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatementContext ------------------------------------------------------------------

HelloParser::ReturnStatementContext::ReturnStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::ExprContext* HelloParser::ReturnStatementContext::expr() {
  return getRuleContext<HelloParser::ExprContext>(0);
}


size_t HelloParser::ReturnStatementContext::getRuleIndex() const {
  return HelloParser::RuleReturnStatement;
}


std::any HelloParser::ReturnStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitReturnStatement(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::ReturnStatementContext* HelloParser::returnStatement() {
  ReturnStatementContext *_localctx = _tracker.createInstance<ReturnStatementContext>(_ctx, getState());
  enterRule(_localctx, 20, HelloParser::RuleReturnStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    match(HelloParser::T__8);
    setState(142);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4468417604091912) != 0)) {
      setState(141);
      expr();
    }
    setState(144);
    match(HelloParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

HelloParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::ExprContext* HelloParser::IfStatementContext::expr() {
  return getRuleContext<HelloParser::ExprContext>(0);
}

std::vector<HelloParser::StatementContext *> HelloParser::IfStatementContext::statement() {
  return getRuleContexts<HelloParser::StatementContext>();
}

HelloParser::StatementContext* HelloParser::IfStatementContext::statement(size_t i) {
  return getRuleContext<HelloParser::StatementContext>(i);
}


size_t HelloParser::IfStatementContext::getRuleIndex() const {
  return HelloParser::RuleIfStatement;
}


std::any HelloParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::IfStatementContext* HelloParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 22, HelloParser::RuleIfStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(146);
    match(HelloParser::T__9);
    setState(147);
    expr();
    setState(148);
    match(HelloParser::T__10);
    setState(149);
    statement();
    setState(152);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      setState(150);
      match(HelloParser::T__11);
      setState(151);
      statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStatementContext ------------------------------------------------------------------

HelloParser::WhileStatementContext::WhileStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::ExprContext* HelloParser::WhileStatementContext::expr() {
  return getRuleContext<HelloParser::ExprContext>(0);
}

HelloParser::StatementContext* HelloParser::WhileStatementContext::statement() {
  return getRuleContext<HelloParser::StatementContext>(0);
}


size_t HelloParser::WhileStatementContext::getRuleIndex() const {
  return HelloParser::RuleWhileStatement;
}

